--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -10,7 +10,7 @@
       rel="stylesheet"
       href="https://fonts.googleapis.com/css?family=Nunito"
     />
-    <link rel="stylesheet" href="/public/styles/styles.css" />
+    <link rel="stylesheet" href="styles/styles.css" />
     <title>Shoutout to the Beat</title>
   </head>
 
@@ -25,7 +25,7 @@
       </div>
     </section>
     <!--Conditionally Render page based on if logged in-->
-
+    {{{body}}}
     <footer></footer>
   </body>
 </html>
