resolving merge conflicts

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -21,7 +21,9 @@
         <p class="title">Shoutout to the Beat</p>
         <!--Conditionally Render logout based on if logged in-->
         <button class="button new-post">New Post</button>
-        <button class="button login-button">Logout</button>
+        {{#if logged_in}}
+          <button class="button login-button" id="logout">Logout</button>
+        {{/if}}
       </div>
     </section>
     <!--Conditionally Render page based on if logged in-->
