--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -66,7 +66,7 @@ body {
 }
 .btn {
   top: 0;
-  left: 0;
+  left: 0px;
   position: absolute;
   width: 110px;
   height: 100%;
@@ -96,8 +96,11 @@ body {
 #input-username {
   margin-top: 225px;
 }
+#input-username-register {
+  margin-top: 225px;
+}
 #input-password {
-  margin-top: 30px;
+  margin-top: 20px;
 }
 .checkbox {
   color: #ffffff;
@@ -106,6 +109,12 @@ body {
 }
 span {
   color: #dad7cd;
+}
+#register {
+  display: none;
+}
+#login {
+  display: block;
 }
 .submit-btn {
   width: 85%;
