added ability to signup, logout, and login

--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -7,13 +7,13 @@
   <form id="login" class="input-group login-form">
     <input
       type="text"
-      class="input-field username-login"
+      class="input-field email-login"
       id="input-username"
-      placeholder="Username"
+      placeholder="Email"
       required
     />
     <input
-      type="text"
+      type="password"
       class="input-field password-login"
       id="input-password"
       placeholder="Enter Password"
@@ -26,8 +26,8 @@
     <input
       type="text"
       class="input-field username-signup"
-      id="input-username-register"
-      placeholder="Email"
+      id="input-username"
+      placeholder="Username"
       required
     />
     <input
@@ -38,7 +38,7 @@
       required
     />
     <input
-      type="text"
+      type="password"
       class="input-field password-signup"
       id="input-password"
       placeholder="Enter Password"
