--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -20,6 +20,7 @@
       <div class="hero-body">
         <p class="title">Shoutout to the Beat</p>
         <!--Conditionally Render logout based on if logged in-->
+
         <button class="button new-post">New Post</button>
         {{#if logged_in}}
           <button class="button login-button" id="logout">Logout</button>
@@ -31,3 +32,5 @@
     <footer></footer>
   </body>
 </html>
+<script src="./js/logout.js">
+</script>
