Updated the login/signup toggle button

--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -8,14 +8,14 @@
     <input
       type="text"
       class="input-field email-login"
-      id="input-username"
+      id="input-username-login"
       placeholder="Email"
       required
     />
     <input
       type="password"
       class="input-field password-login"
-      id="input-password"
+      id="input-password-login"
       placeholder="Enter Password"
       required
     />
@@ -26,7 +26,7 @@
     <input
       type="text"
       class="input-field username-signup"
-      id="input-username"
+      id="input-username-signup"
       placeholder="Username"
       required
     />
@@ -40,7 +40,7 @@
     <input
       type="password"
       class="input-field password-signup"
-      id="input-password"
+      id="input-password-signup"
       placeholder="Enter Password"
       required
     />
