--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -32,5 +32,7 @@
     <footer></footer>
   </body>
 </html>
-<script src="./js/logout.js">
-</script>
+{{#if logged_in}}
+  <script src="./js/logout.js">
+  </script>
+{{/if}}
