--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -66,7 +66,7 @@ body {
 }
 .btn {
   top: 0;
-  left: 110px;
+  left: 0px;
   position: absolute;
   width: 110px;
   height: 100%;
@@ -77,7 +77,6 @@ body {
 
 .input-group {
   top: 180px;
-  position: absolute;
   width: 280px;
   margin-left: 65px;
   transition: 0.5s;
@@ -93,13 +92,11 @@ body {
   outline: none;
   background: transparent;
 }
-#input-username {
-  margin-top: 225px;
+
+#input-password-login {
+  margin-top: 20px;
 }
-#input-username-register {
-  margin-top: 225px;
-}
-#input-password {
+#input-password-signup {
   margin-top: 20px;
 }
 .checkbox {
