updates to songpost

--- a/views/layouts/songposts.handlebars
+++ b/views/layouts/songposts.handlebars
@@ -4,6 +4,20 @@
 </div>
 
 <div class="card-body">
+ <div class="columns">
+  <div class="column">
+    First column
+  </div>
+  <div class="column">
+    Second column
+  </div>
+  <div class="column">
+    Third column
+  </div>
+  <div class="column">
+    Fourth column
+  </div>
+</div>
   <p>
     I love this song omg!!! The beat is cool and the artist is my favorite.
   </p>
