added reply btn, fixed code

--- a/views/songposts.handlebars
+++ b/views/songposts.handlebars
@@ -1,10 +1,13 @@
 <div>
   <h2>Songpost</h2>
+  <p>
+    I love this song omg!!! The beat is cool and the artist is my favorite.
+  </p>
 
 </div>
 
 <div class="card-body">
- <div class="columns">
+ <br class="columns">
   <div class="column">
     First column
   </div>
@@ -17,8 +20,8 @@
   <div class="column">
     Fourth column
   </div>
+  <br></br>
+  <button id="the-btn">
+    Reply</button>
 </div>
-  <p>
-    I love this song omg!!! The beat is cool and the artist is my favorite.
-  </p>
 </div>
