--- a/views/songposts.handlebars
+++ b/views/songposts.handlebars
@@ -1,27 +1,40 @@
-<div>
-  <h2>Songpost</h2>
-  <p>
-    I love this song omg!!! The beat is cool and the artist is my favorite.
-  </p>
+<div class="container songpost-container">
+  {{#each songPosts as |songPost|}}
+  <div class="card songpost-card">
 
-</div>
+    <div class="card-content">
+      <div class="media">
+        <div class="media-left left-card">
+          <p class="subtitle is-6">@johnsmith</p>
+          <div class="content">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus
+            nec iaculis mauris.
+            <br />
 
-<div class="card-body">
- <br class="columns">
-  <div class="column">
-    First column
+          </div>
+<button class="button is-success is-light">Reply</button>
+        </div>
+        <div class="media-content">
+
+          <figure class="image is-100x100">
+            <img
+              src="https://bulma.io/images/placeholders/96x96.png"
+              alt="Album Art"
+            />
+          </figure>
+          <h3>
+            Song Title
+          </h3>
+          <h5>
+            Artist Name
+          </h5>
+          <h5>
+            Album Name
+          </h5>
+        </div>
+      </div>
+
+    </div>
   </div>
-  <div class="column">
-    Second column
-  </div>
-  <div class="column">
-    Third column
-  </div>
-  <div class="column">
-    Fourth column
-  </div>
-  <br></br>
-  <button id="the-btn">
-    Reply</button>
-</div>
+{{/each}}
 </div>
