--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -10,7 +10,7 @@
       rel="stylesheet"
       href="https://fonts.googleapis.com/css?family=Nunito"
     />
-    <link rel="stylesheet" href="styles/styles.css" />
+    <link rel="stylesheet" href="/styles/styles.css" />
     <title>Shoutout to the Beat</title>
   </head>
 
@@ -34,6 +34,6 @@
   </body>
 </html>
 {{#if logged_in}}
-  <script src="./js/logout.js">
+  <script src="/./js/logout.js">
   </script>
 {{/if}}
