--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -222,22 +222,110 @@ span {
   background: #dad7cd;
   box-shadow: 3px 4px 4px #3a5a40;
 }
-.songpost-container {
-
+/* songposts page styling*/
+.card {
+  margin-top: 10px;
 }
-.songpost-card {
-  margin: 0 auto;
-  /* width: 70%; */
+.media {
+  width: 800px;
+  flex-direction: row;
+  justify-content: space-between;
 }
+.media-left {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+}
+.post-media {
+  display: flex;
+}
+.album-info {
+  display: flex;
+  padding-left: 285px;
+}
+.song-information {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  padding-left: 5px;
+  padding-right: 5px;
+}
+.song-title {
+  padding-bottom: 10px;
+}
+#reply {
+  color: #3a5a40;
+  background: #fff;
 
-
-.box {
-  width: 100%;
-  height: 200px;
-  background-color: #588157;
+  width: 100px;
+  height: 25px;
+  border: 1px solid #dad7cd;
+  border-radius: 15px;
+  box-shadow: 3px 4px 4px #b5d3bb;
+  cursor: pointer;
+  transition: 0.3s all ease-in-out;
+}
+#reply:hover {
+  transform: scale(1.05);
+  background: #588157;
+  color: #dad7cd;
+  box-shadow: 3px 4px 4px #b5d3bb;
+}
+.username-info {
+  display: flex;
+  align-items: flex-start;
+}
+.username-box {
+  display: flex;
+  width: 130px;
+  height: 30px;
+  border-radius: 8px;
+  padding-right: 5px;
+}
+.username-box p {
+  padding-left: 5px;
+  padding-right: px;
+}
+.posted-text {
+  padding-left: 5px;
+  font-style: oblique;
+}
+.card-box {
+  display: flex;
+  height: 230px;
   margin-top: 20px;
-
-.left-card {
-  width: 70%;
-
+  border: 10px solid #588157;
 }
+.image {
+  width: 180px;
+  height: 180px;
+
+  border-radius: 15px;
+}
+.image img {
+  border-radius: 15px;
+}
+.post-content {
+  padding-top: 25px;
+  word-wrap: normal;
+  padding-bottom: 25px;
+}
+.exit-button-2 {
+  position: absolute;
+  top: 177px;
+  left: 54px;
+  color: #3a5a40;
+  background: #fff;
+  border: 1px solid #dad7cd;
+  border-radius: 15px;
+  box-shadow: 3px 4px 4px #b5d3bb;
+  cursor: pointer;
+  transition: 0.3s all ease-in-out;
+}
+.exit-button-2:hover {
+  transform: scale(1.05);
+  background: #588157;
+  color: #dad7cd;
+  box-shadow: 3px 4px 4px #b5d3bb;
+}
+/* single songpost page*/
