added more coding to songpost handlebars

--- a/views/songposts.handlebars
+++ b/views/songposts.handlebars
@@ -41,7 +41,7 @@
   {{/each}}
 
 </div>
-<!--<div class="container songpost-container">
+<div class="container songpost-container">
   {{#each songPosts as |songPost|}}
     <div class="card songpost-card">
 
@@ -62,7 +62,7 @@
               id="reply"
             >Reply</button>
           </div>
-          <!--  
+            
         </div>
   <div class="album-info">
 
@@ -86,7 +86,7 @@
       </div>
     </div> 
   {{/each}} 
-</div> -->
+</div> 
 <script src="./js/SongPosts.js">
 </script>
 
