commenting out any unused handlebars, updated user route to require 8 character password, updated screenshots of the website, updated readme to have new screenshots, updated home routes to uninclude any unused routes,

--- a/views/comments.handlebars
+++ b/views/comments.handlebars
@@ -1,4 +1,4 @@
-<div 
+{{! <div 
 class = "box"> 
 </div>
 
@@ -15,4 +15,4 @@ class = "box">
         <div class="comment-list">
         </div>
 </form>
-</div>
+</div> }}
