--- a/views/single-songpost.handlebars
+++ b/views/single-songpost.handlebars
@@ -1,4 +1,4 @@
-<button class="button exit-button-2">x</button>
+{{!-- <button class="button exit-button-2">x</button>
 <div class="container songpost-container">
   <div class="card songpost-card">
 
@@ -94,4 +94,4 @@
 
 </div> -->
 <script src="/js/comments.js">
-</script>
+</script> --}}
