added code for handlebars

--- a/views/songposts.handlebars
+++ b/views/songposts.handlebars
@@ -87,6 +87,6 @@
     </div> 
   {{/each}} 
 </div> -->
-<script src="./js/SongPosts.js">
+<script src="/static/public/js/SongPosts.js" type="text/javascript">
 </script>
 
